feat(microbiology): distinguish AST technique from measurement